# file-crypto

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt  routes.py  schema.py  session.py  settings.json  setup.cfg  styles.css  styles.yaml
data/: users.json
src/: constants.py
src/api/auth/: service.py
src/api/file_crypto/: service.py
src/api/sign_file/: service.py
src/api/signed_file/: service.py
src/auth/: service.py
src/components/: __init__.py
src/components/layouts/: AppShell.py  __init__.py
src/components/modules/: __init__.py  confirm_modal.py  error_modal.py  footer.py  success_modal.py  sucess_modal.py
src/helpers/: climage.py  cryptography.py  file.py  form_validation.py  highlight.py  index.py  macros.py  page_manager.py
src/pages/: routes.py
src/pages/auth/: __init__.py  login.py  logout.py  register.py
src/pages/dashboard/: __init__.py  decrypt_file.py  download_shared_file.py  encrypt_file.py  index.py  sign_file.py  upload_file.py  verify_signed_file.py
src/pages/dashboard/file_preview/: download_file.py  index.py  password_prompt.py  theme_picker.py
src/pages/dashboard/file_preview/file_information/: index.py
src/pages/dashboard/file_preview/file_information/edit/: index.py
src/pages/dashboard/settings/: change_password.py  index.py
src/pages/dashboard/settings/change_password/: index.py
src/pages/dashboard/settings/your_information/: index.py
src/pages/dashboard/settings/your_information/edit/: index.py
src/pages/dashboard/tools/: decrypt_file.py  encrypt_file.py  index.py  sign_file.py  tools.py  verify_signed_file.py
src/pages/errors/: __init__.py  form_validation_error.py
src/types/: Page.py  __init__.py
