[tool.poetry]
name = "file-crypto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poe.tasks]
dev = "python app.py"
lint = "flake8"
pretty = "isort ."

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.5.0"
mongoengine = "^0.24.1"
requests = "^2.28.0"
pymongo = {extras = ["srv"], version = "^4.1.1"}
pycryptodome = "^3.15.0"
pytermgui = "^6.4.0"
PyYAML = "^6.0"
Pygments = "^2.12.0"
python-magic = "^0.4.27"
climage = "^0.1.3"
pydash = "^5.1.0"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
poethepoet = "^0.14.0"
black = {version = "^22.3.0", allow-prereleases = true}
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
